--- a/src/AccountsPage/classes/AccountsCheckTest.cls
+++ b/src/AccountsPage/classes/AccountsCheckTest.cls
@@ -4,7 +4,7 @@
 */
 
 @isTest
-public class AccountsCheckTest {
+private class AccountsCheckTest {
 	
     @isTest 
     private static void noResultTest()
